Updated methods and constants in order to integrate load_worklog function.

--- a/resources/config.json
+++ b/resources/config.json
@@ -1,1 +1,1 @@
-{"appearance_theme": "system", "api_key_token": "", "selected_user": "", "selected_month": "", "selected_file_path": ""}
+{"appearance_theme": "system", "api_key_token": "NzM5NDc5NDAzMDE1Ohji2BUgMburFWu8j9UiE/bcYXSN", "selected_user": "Panzeri Samuele", "selected_month": "January", "selected_file_path": ""}
