--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,13 @@
+permissions: write-all
+permissions: read-all
+
 name: Build
 
 on:
   push:
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-permissions: write-all
-
+      
 jobs:
   createrelease:
     name: Create Release
