--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,9 @@ jobs:
   createrelease:
     name: Create Release
     runs-on: ubuntu-latest
+    outputs:
+      release_url: ${{ steps.create_release.outputs.upload_url }}
+
     steps:
     - name: Create Release
       id: create_release
@@ -23,13 +26,7 @@ jobs:
         release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
-    - name: Output Release URL File
-      run: echo "${{ steps.create_release.outputs.upload_url }}" > release_url.txt
-    - name: Save Release URL File for publish
-      uses: actions/upload-artifact@v4
-      with:
-        name: release_url
-        path: release_url.txt
+
 
   build:
     name: Build packages
@@ -42,36 +39,20 @@ jobs:
     - name: Set up Python 3.9
       uses: actions/setup-python@v5.1.0
       with:
-        python-version: 3.9
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt        
+        python-version: 3.9      
 
     - name: Build Package Application
       uses: JackMcKew/pyinstaller-action-windows@main
       with:
-        path: .
-
-    - name: Load Release URL File from release job
-      uses: actions/download-artifact@v4
-      with:
-        name: release_url
-
-    - name: Get Release File Name & Upload URL
-      id: get_release_info
-      shell: bash
-      run: |
-        value=`cat release_url/release_url.txt`
-        echo "::{name}={value}" >> $GITHUB_OUTPUT    
+        path: .  
 
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        RELEASE_URL: ${{needs.createrelease.outputs.release_url}}
       with:
-        upload_url: ${{ steps.get_release_info.outputs.upload_url }}
+        upload_url: $RELEASE_URL
         asset_path: ./dist/Jira LogWork.exe
         asset_name: Jira LogWork.exe
